tests/negative/parallel_for_loop_var_assign.far
fun main() -> i64 {
  parallel for i in 0..<8 {
    i = i + 1
  }
  return 0
}
